# intro-to-langsmith

./: .env.example  README.md  example.env  pyproject.toml  requirements.txt
notebooks/module_0/: rag_application.ipynb  utils.py
notebooks/module_1/: alternative_tracing_methods.ipynb  conversational_threads.ipynb  tracing_basics.ipynb  types_of_runs.ipynb  utils.py
notebooks/module_2/: app.py  dataset_upload.ipynb  evaluators.ipynb  experiments.ipynb  pairwise_experiments.ipynb  summary_evaluators.ipynb
notebooks/module_3/: app.py  playground_experiments.ipynb  prompt_engineering_lifecycle.ipynb  prompt_hub.ipynb
notebooks/module_4/: publishing_feedback.ipynb
notebooks/module_5/: app.py  filtering.ipynb  online_evaluation.ipynb
